--- a/DsoKotlinExtensions/build.gradle
+++ b/DsoKotlinExtensions/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'com.github.dcendents.android-maven'
 }
+
+group = 'com.github.Moriafly'
 
 android {
     compileSdkVersion 30
@@ -11,7 +14,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0-dev01"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
